agregar opcion de ingresar color de fondo

--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,8 @@ header {
 .Tablero {
   display: flex;
   flex-direction: column;
-  background-color: gainsboro;
+  background-color: rgba(120, 120, 120,0.4);
   padding: 30px;
-
   position: relative;
 }
 
